--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Payment.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Payment.cshtml
@@ -117,39 +117,52 @@
                             <div class="row" style="margin:15px">
                                 <p style="font-weight:bold;font-size:100%;">YOUR ORDER</p>
                             </div>
-                            <div style="border-bottom:solid 0.1px; border-color:gainsboro;height:auto">
-                                <div class="row">
-                                    <div class="col" style="text-align:center">
-                                        monalisa
-                                    </div>
-                                    <div class="col" style="text-align:center">
-                                        $100
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col" style="text-align:center">
-                                        Color
-                                    </div>
-                                    <div class="col" style="text-align:center">
-                                        $100
-                                    </div>
-                                </div>
+                            <div style="border-bottom:solid 0.1px; border-color:gainsboro;height:auto"  id="myOrder">
+                               
                             </div>
                             <div class="row" style="margin-top:15px">
                                 <div class="col" style="text-align:center;font-weight:bold;">
                                     Total Purchase
                                 </div>
-                                <div class="col" style="text-align:center">
-                                    $100
+                                <div class="col" style="text-align:center" id="totalPrice">
+                                   
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12" style="text-align:center;margin:auto;margin-top:50px">            
-                        <button class="custom-button" type="submit" id="btnPayment"><i class="fa fa-shopping-cart ">Complete Purchase</i></button>
+                <div class="col-md-12" style="text-align:center;margin:auto;margin-top:50px">
+                    <button class="custom-button" type="submit" id="btnPayment"><i class="fa fa-shopping-cart ">Complete Purchase</i></button>
                 </div>
             </div>
         </div>
     </div>
 </section>
+@section Scripts{
+    <script>
+        $(".cart-button").css("display", "none");
+        $(document).ready(function () {
+            if (localStorage.getItem("cart") != null) {
+                var x = JSON.parse(localStorage.getItem("cart"));
+                var total = 0;
+                var y = "";
+                for (var i = 0; i < x.length; i++) {
+                    y += `<div class="row">
+                        <div class="col" style="text-align:left">
+                           ${x[i]["name"]}
+                         </div>
+                         <div class="col" style="text-align:left">
+                           ${x[i]["nameArtist"]}
+                         </div>
+                        <div class="col" style="text-align:left">
+                                $${x[i]["price"]}
+                        </div>
+                    </div>`
+                    total += parseInt(x[i]["price"]);
+                }
+                $("#myOrder").html(y);
+                $("#totalPrice").html("$" + total);
+            }
+        })
+    </script>
+}
