Update MyFavorite, Artwork Detail, Auction Detail

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
@@ -22,6 +22,9 @@
     {
         MyComment = ViewBag.MyComment;
     }
+
+    bool currentFavorite = MyComment == null ? false : MyComment.Favorite;
+    string FavoriteString = currentFavorite ? "My Favorite" : "Add to favorites";
 }
 <!--============= Hero Section Starts Here =============-->
 <div class="hero-section style-2">
@@ -110,9 +113,10 @@
                     </div>
                     <div class="buy-now-area" id="BuyNow">
                         <a href="#0" class="custom-button">Add to Cart</a>
-                        <a href="#0" class="rating custom-button active border">
-                            <i class="fas fa-star"></i> Add to
-                            Wishlist
+                        <input type="hidden" name="currentFavorite" id="currentFavorite" value="@(currentFavorite==true?'1':'0')">
+                        <a data-url="@Url.Action("EditFavorite")" class="rating custom-button active border" id="FavoriteBtn">
+                            <i class="fas fa-star"></i>
+                            @FavoriteString
                         </a>
                         <div class="share-area">
                             <span>Share to:</span>
@@ -130,6 +134,9 @@
                                     <a href="#0"><i class="fab fa-instagram"></i></a>
                                 </li>
                             </ul>
+                        </div>
+                        <div class="alert alert-info d-none" role="alert" id="alertBoxRate">
+                            This is a info alert—check it out!
                         </div>
                     </div>
                 </div>
