--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
@@ -73,13 +73,13 @@
                         <a href="/Index/auction">Auction</a>
                     </li>
                     <li>
-                        <a href="DashBoard">My Account</a>
+                        <a href="/Index/userprofile">My Account</a>
                     </li>
                     <li>
-                        <a href="AboutUs">AboutUs</a>
+                        <a href="/Index/AboutUs">About Us</a>
                     </li>
                     <li>
-                        <a href="ContactUs">Contact</a>
+                        <a href="/Index/ContactUs">Contact Us</a>
                     </li>
                 </ul>
                 <form class="search-form">
