--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Artwork.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Artwork.cshtml
@@ -28,7 +28,7 @@
 </div>
 <!--============= Hero Section Ends Here =============-->
 <!--============= Featured Auction Section Starts Here =============-->
-<section class="featured-auction-section padding-bottom mt--240 mt-lg--440 pos-rel">
+@*<section class="featured-auction-section padding-bottom mt--240 mt-lg--440 pos-rel">
     <div class="container">
         <div class="section-header cl-white mw-100 left-style">
             <h3 class="title">Bid on These Featured Auctions!</h3>
@@ -165,7 +165,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <!--============= Featured Auction Section Ends Here =============-->
 <!--============= Product Auction Section Starts Here =============-->
 <div class="product-auction padding-bottom" id="productArt">
@@ -202,9 +202,9 @@
                 <div class="col-sm-10 col-md-6 col-lg-4">
                     <div class="auction-item-2">
                         <div class="auction-thumb">
-                            <a href="product-details.html"><img id="srcImg" width="300px" height="300px" src="~/assets/img/artwork/@item.Image" alt="product"></a>
+                            <a href="/Index/artworkdetail?id=@item.Id"><img id="srcImg" width="300px" height="300px" src="~/assets/img/artwork/@item.Image" alt="product"></a>
                             <a href="#0" class="rating"><i class="far fa-star"></i></a>
-                            <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
+                            @*<a href="#0" class="bid"><i class="flaticon-auction"></i></a>*@
                         </div>
                         <div class="auction-content">
                             <h6 class="title">
@@ -212,11 +212,11 @@
                             </h6>
                             <div class="bid-area">
                                 <div class="bid-amount">
-                                    <div class="icon">
+                                    @*<div class="icon">
                                         <i class="flaticon-auction"></i>
-                                    </div>
+                                    </div>*@
                                     <div class="amount-content">
-                                        <div class="current">Price</div>
+                                        <div class="current">Artist</div>
                                         <div class="amount">@item.Artist.Name</div>
                                     </div>
                                 </div>
