--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
@@ -57,9 +57,16 @@
                     <h5>$@item.DefautPrice</h5>
                     <p>@item.Description</p>
                     <a href='/Index/artworkdetail?id=@item.Id'>Readmore</a>
+                    @*<input type="hidden" name="currentFavorite" id="currentFavorite" value="@(currentFavorite==true?'1':'0')">
                     <div class="text-center">
-                        <a href="#0" class="custom-button">Add to Favorites</a>
+                        <a data-url="@Url.Action("EditFavorite")" class="custom-button" id="FavoriteBtn">
+                            <i class="fas fa-star"></i>
+                            @FavoriteString
+                        </a>
                     </div>
+                    <div class="alert alert-info d-none" role="alert" id="alertBoxRate">
+                        This is a info alert—check it out!
+                    </div>*@
                 </div>
             </div>
         }
