--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeadPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeadPartial.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/assetsIndex/css/jquery-ui.min.css">
     <link rel="stylesheet" href="~/assetsIndex/css/main.css">
     <link rel="stylesheet" href="~/assetsIndex/css/lightbox.min.css">
+    <link rel="stylesheet" href="~/notification/ikr.notification.css">
 
     <link rel="shortcut icon" href="~/assetsIndex/2020/02/favicon.ico" type="image/x-icon">
     <link href="https://use.fontawesome.com/releases/v5.10.0/css/v4-shims.css" rel="stylesheet" />
