--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -13,6 +13,8 @@
 <script src="~/assetsIndex/js/jquery-ui.min.js"></script>
 <script src="~/assetsIndex/js/main.js"></script>
 <script src="/assetsIndex/js/lightbox-plus-jquery.min.js"></script>
+<script src="~/notification/ikr.notificationPlugin.js"></script>
+
 <script>
     window.onload = function () {
         AddToCart();
@@ -181,7 +183,7 @@
                         //$('#mainBody').html(res);
                         alert("Successful");
                     }
-                })   
+                })
             }
 
         })
