--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/DashBoard.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/DashBoard.cshtml
@@ -1,4 +1,10 @@
-﻿@{Layout = "~/Views/UserLayout/MainLayout.cshtml";}
+﻿@{Layout = "~/Views/UserLayout/MainLayout.cshtml";
+    List <Transaction> listTransaction = null;
+    if (ViewBag.listTransaction != null)
+    {
+        listTransaction = ViewBag.listTransaction;
+    }
+}
 <!--============= Hero Section Starts Here =============-->
 <div class="hero-section style-2 pb-lg-400">
     <div class="container">
@@ -68,162 +74,70 @@
                     <div class="dashboard-purchasing-tabs">
                         <ul class="nav-tabs nav">
                             <li>
-                                <a href="#current" class="active" data-toggle="tab">Current</a>
+                                <a href="#current" class="active" data-toggle="tab">Transaction</a>
                             </li>
                             <li>
-                                <a href="#pending" data-toggle="tab">Pending</a>
+                                <a href="#pending" data-toggle="tab">Transaction Detail</a>
                             </li>
-                            <li>
+                            @*<li>
                                 <a href="#history" data-toggle="tab">History</a>
-                            </li>
+                            </li>*@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane show active fade" id="current">
                                 <table class="purchasing-table">
                                     <thead>
-                                    <th>Item</th>
-                                    <th>Bid Price</th>
-                                    <th>Highest Bid</th>
-                                    <th>Lowest Bid</th>
-                                    <th>Expires</th>
+                                        <tr>
+                                            <th>Transaction ID</th>
+                                            <th>Total Price</th>
+                                            <th>Total Fee</th>
+                                            <th>Payment</th>
+                                            <th>Active</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
+                                        @foreach(var item in listTransaction)
+                                        {
+                                            <tr>
+                                                <td data-purchase="item">@item.Id</td>
+                                                <td data-purchase="bid price">@item.TotalPrice</td>
+                                                <td data-purchase="highest bid">@item.TotalFee</td>
+                                                <td data-purchase="lowest bid">@Tools.GetPaymentById(item.PaymentId).Name</td>
+                                                <td data-purchase="expires">@item.Active</td>
+                                            </tr>
+                                        }
+                                        
                                     </tbody>
                                 </table>
                             </div>
                             <div class="tab-pane show fade" id="pending">
                                 <table class="purchasing-table">
                                     <thead>
-                                    <th>Item</th>
-                                    <th>Bid Price</th>
-                                    <th>Highest Bid</th>
-                                    <th>Lowest Bid</th>
-                                    <th>Expires</th>
+                                        <tr>
+                                            <th>Transaction ID</th>
+                                            <th>Artwork</th>
+                                            <th>Price</th>
+                                            <th>Fee</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td data-purchase="item">2018 Hyundai Sonata</td>
-                                            <td data-purchase="bid price">$1,775.00</td>
-                                            <td data-purchase="highest bid">$1,775.00</td>
-                                            <td data-purchase="lowest bid">$1,400.00</td>
-                                            <td data-purchase="expires">7/2/2021</td>
-                                        </tr>
+                                        @foreach (var item in listTransaction)
+                                        {
+                                            foreach (var td in Tools.GetTransactionDetailsFromIdTransaction(item.Id))
+                                            {
+                                                <tr>
+                                                    <td data-purchase="item">@td.TransactionId</td>
+                                                    <td data-purchase="bid price">@Tools.GetArtworkById(td.ArtworkId).Name</td>
+                                                    <td data-purchase="highest bid">@td.Price</td>
+                                                    <td data-purchase="lowest bid">@td.Fee</td>
+                                                </tr>
+                                            }
+
+                                        }
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="tab-pane show fade" id="history">
+                            @*<div class="tab-pane show fade" id="history">
                                 <table class="purchasing-table">
                                     <thead>
                                     <th>Item</th>
@@ -284,7 +198,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
