--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MainLayout.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MainLayout.cshtml
@@ -41,3 +41,29 @@
 <!-- Mirrored from pixner.net/sbidu/main/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Jun 2021 00:49:01 GMT -->
 </html>
 @RenderSection("Scripts", false)
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#noti_Container").ikrNotificationSetup();
+        $.ajax({
+            type: 'GET',
+            dataType: 'json',
+            url: "/Notification/GetNotifications",
+            traditional: true,
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var notifications = data;
+                $("#noti_Container").ikrNotificationCount({
+                    NotificationList: notifications,
+                    NotiFromPropName: "FromArtwork",
+                    ListTitlePropName: "Header",
+                    ListBodyPropName: "Body",
+                    ControllerName: "Notification",
+                    ActionName: "AllNotifications"
+                })
+            },
+            error: function (xhr, status, error) {
+
+            }
+        })
+    })
+</script>
