--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MenuUserPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MenuUserPartial.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="col-sm-10 col-md-7 col-lg-4">
+﻿@using Newtonsoft.Json;
+@using Microsoft.AspNetCore.Http;
+
+<div class="col-sm-10 col-md-7 col-lg-4">
     <div class="dashboard-widget mb-30 mb-lg-0 sticky-menu">
         <div class="user">
             <div class="thumb-area">
@@ -14,9 +17,13 @@
             </div>
         </div>
         <ul class="dashboard-menu">
-            <li>
-                <a href="dashboard" class="active"><i class="flaticon-dashboard"></i>Dashboard</a>
-            </li>
+            @if (Tools.GetCustomerfromSession(Context.Session.GetString("USER")) != null)
+            {
+                <li>
+                    <a href="dashboard" class="active"><i class="flaticon-dashboard"></i>Dashboard</a>
+                </li>
+            }
+
             <li>
                 <a href="UserProfile"><i class="flaticon-settings"></i>Personal Profile </a>
             </li>
